hphp/test/slow/constructor/ctor-compat-1.php.expectf

Fatal error: Declaration of D::__construct() must be compatible with that of C::__construct() in %s on line 6
